--- a/css/_atoms/_blockquotes.scss
+++ b/css/_atoms/_blockquotes.scss
@@ -7,6 +7,7 @@ blockquote {
   margin: 2rem auto 1rem 0;
   padding: 1rem;
   border: 1px solid $lt-gray;
+  border-radius: 0.25rem;
   p {
     padding: 0 0 0.5rem;
     @include font-bold;
