--- a/css/_molecules/_accordions.scss
+++ b/css/_molecules/_accordions.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   margin: 1rem auto 0;
   padding: 1rem;
-  border: 1px solid $lt-gray;
+  border: 1px solid $md-gray;
   border-radius: 0.25rem;
   background-color: $white;
   cursor: pointer;
