--- a/css/master.css
+++ b/css/master.css
@@ -121,11 +121,6 @@ ol + h1, ol + h2, ol + h3, ol + h4,
 dl + h1, dl + h2, dl + h3, dl + h4 {
   padding: 2rem 0 0; }
 
-/*
-ul + h2, ul + h3, ul + h4,
-ol + h2, ol + h3, ol + h4,
-dl + h2, dl + h3, dl + h4 {padding: 1rem 0 0;}
-*/
 p {
   width: 100%;
   max-width: 39rem;
@@ -239,7 +234,8 @@ p.icon a {
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  line-height: 1.5; }
   p.icon a span {
     display: flex;
     flex-direction: column;
@@ -527,7 +523,8 @@ blockquote {
   max-width: 36rem;
   margin: 2rem auto 1rem 0;
   padding: 1rem;
-  border: 1px solid #eeeeee; }
+  border: 1px solid #eeeeee;
+  border-radius: 0.25rem; }
   blockquote p {
     padding: 0 0 0.5rem;
     font-family: "Montserrat", sans-serif;
@@ -1528,7 +1525,7 @@ nav.open .search {
   overflow: hidden;
   margin: 1rem auto 0;
   padding: 1rem;
-  border: 1px solid #eeeeee;
+  border: 1px solid #cccccc;
   border-radius: 0.25rem;
   background-color: #ffffff;
   cursor: pointer; }
