Banner background-attachment defect fix
Added .no-touch to banner background .fixed class; fixes an issue on mobile devices.

--- a/css/_organisms/_banners.scss
+++ b/css/_organisms/_banners.scss
@@ -88,5 +88,5 @@
 .bg-photo.right-top {background-position: right top;}
 
 @media (min-width: 48rem) {
-  .bg-photo.fixed {background-attachment: fixed;}
+  .no-touch .bg-photo.fixed {background-attachment: fixed;}
 }
