--- a/css/_atoms/_figures.scss
+++ b/css/_atoms/_figures.scss
@@ -32,5 +32,7 @@ figure:last-child {padding: 1rem 0 0;}
 .column > figure, .row > figure {padding: 0 0 1rem;}
 .column > figure:last-child, .row > figure:last-child {padding: 0;}
 
+.column p + figure:last-child {padding: 1rem 0 0;}
+
 .row > p + figure {padding: 1rem 0;}
 .row > p + figure:last-child {padding: 1rem 0 0;}
