--- a/css/master.css
+++ b/css/master.css
@@ -930,6 +930,81 @@ label.meter {
   label.meter meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
     background: #c00c00; }
 
+nav.breadcrumbs {
+  display: inline-flex;
+  padding: 1rem 0;
+  line-height: 1; }
+  nav.breadcrumbs ol {
+    display: inline-block;
+    overflow: hidden;
+    padding: 0;
+    line-height: 1.2;
+    list-style-type: none;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+    nav.breadcrumbs ol li {
+      display: inline-flex;
+      width: auto;
+      padding: 0; }
+    nav.breadcrumbs ol li a {
+      text-decoration: none; }
+    nav.breadcrumbs ol li:after {
+      display: block;
+      padding: 0 0.25rem 0 0.5rem;
+      content: "/"; }
+    nav.breadcrumbs ol li:last-of-type:after {
+      display: none; }
+
+nav.pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 0; }
+  nav.pagination ul {
+    flex-direction: row;
+    justify-content: flex-start;
+    height: auto;
+    overflow: scroll;
+    border: 1px solid #eeeeee;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0); }
+    nav.pagination ul li {
+      min-width: 3rem;
+      padding: 0.5rem 0.75rem;
+      border-right: 1px solid #eeeeee;
+      text-align: center;
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s; }
+    nav.pagination ul li:last-child {
+      padding: 0.5rem 0.75rem;
+      border-right: none; }
+    nav.pagination ul li:hover, nav.pagination ul li:focus {
+      background-color: #eeeeee; }
+    nav.pagination ul li.current {
+      background-color: #df3a32; }
+    nav.pagination ul li.current a {
+      color: white;
+      cursor: inherit; }
+    nav.pagination ul li.disabled:hover, nav.pagination ul li.disabled {
+      background-color: transparent; }
+    nav.pagination ul li.disabled a {
+      color: #cccccc;
+      cursor: inherit; }
+    nav.pagination ul li.first, nav.pagination ul li.previous, nav.pagination ul li.next, nav.pagination ul li.last {
+      min-width: inherit; }
+
+nav.pagination.left {
+  justify-content: flex-start; }
+
 /*
 FORM ELEMENTS
   resets
