--- a/css/master.scss
+++ b/css/master.scss
@@ -8,6 +8,8 @@
 @import "_atoms/chips";
 @import "_atoms/badges";
 @import "_atoms/feedback";
+@import "_atoms/breadcrumbs";
+@import "_atoms/pagination";
 
 @import "_molecules/forms";
 @import "_molecules/search";
