--- a/css/master.css
+++ b/css/master.css
@@ -931,29 +931,32 @@ label.meter {
     background: #c00c00; }
 
 nav.breadcrumbs {
-  display: inline-flex;
-  padding: 1rem 0;
-  line-height: 1; }
+  padding: 1rem 0; }
   nav.breadcrumbs ol {
-    display: inline-block;
-    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
     padding: 0;
-    line-height: 1.2;
-    list-style-type: none;
-    text-overflow: ellipsis;
-    white-space: nowrap; }
+    overflow-x: scroll;
+    list-style-type: none; }
     nav.breadcrumbs ol li {
-      display: inline-flex;
+      display: flex;
       width: auto;
-      padding: 0; }
+      padding: 0;
+      white-space: nowrap; }
     nav.breadcrumbs ol li a {
       text-decoration: none; }
     nav.breadcrumbs ol li:after {
       display: block;
-      padding: 0 0.25rem 0 0.5rem;
+      padding: 0 0.25rem;
       content: "/"; }
-    nav.breadcrumbs ol li:last-of-type:after {
+    nav.breadcrumbs ol li:last-child:after {
       display: none; }
+
+@media (min-width: 48rem) {
+  nav.breadcrumbs ol {
+    overflow-x: auto; } }
 
 nav.pagination {
   display: flex;
@@ -965,7 +968,7 @@ nav.pagination {
     flex-direction: row;
     justify-content: flex-start;
     height: auto;
-    overflow: scroll;
+    overflow-x: scroll;
     border: 1px solid #eeeeee;
     border-radius: 0.25rem;
     font-size: 1rem;
@@ -975,8 +978,10 @@ nav.pagination {
     -o-transform: translateX(0);
     transform: translateX(0); }
     nav.pagination ul li {
-      min-width: 3rem;
-      padding: 0.5rem 0.75rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
       border-right: 1px solid #eeeeee;
       text-align: center;
       -webkit-transition: all 0.25s ease 0s;
@@ -985,8 +990,11 @@ nav.pagination {
       -o-transition: all 0.25s ease 0s;
       transition: all 0.25s ease 0s; }
     nav.pagination ul li:last-child {
-      padding: 0.5rem 0.75rem;
+      padding: 0;
       border-right: none; }
+    nav.pagination ul li a {
+      min-width: 3rem;
+      padding: 0.5rem 0.75rem; }
     nav.pagination ul li:hover, nav.pagination ul li:focus {
       background-color: #eeeeee; }
     nav.pagination ul li.current {
@@ -999,8 +1007,6 @@ nav.pagination {
     nav.pagination ul li.disabled a {
       color: #cccccc;
       cursor: inherit; }
-    nav.pagination ul li.first, nav.pagination ul li.previous, nav.pagination ul li.next, nav.pagination ul li.last {
-      min-width: inherit; }
 
 nav.pagination.left {
   justify-content: flex-start; }
