--- a/css/_organisms/_headers.scss
+++ b/css/_organisms/_headers.scss
@@ -4,6 +4,7 @@ header {
   flex-direction: row;
   align-items: center;
   position: fixed;
+  top: 0;
   z-index: 100;
   width: 100%;
   margin: 0;
