Updated .dark banner text link css
:hover and :focus color is now set to $white for .dark banners.

--- a/css/_organisms/_banners.scss
+++ b/css/_organisms/_banners.scss
@@ -40,6 +40,8 @@
     border-color: $white;
     color: $white;
   }
+  a {color: $primary;}
+  a:hover, a:focus {color: $white;}
 }
 
 .banner.split {
