--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -4,14 +4,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin: 0;
+  margin: -1rem 0 -1rem 0;
   padding: 0;
   .card {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin: 1rem 0;
+    margin: 1rem;
     padding: 0;
     border: 1px solid $lt-gray;
     border-radius: 0.25rem;
@@ -33,7 +33,6 @@
       width: 100%;
     }
   }
-  .card:last-child {margin: 1rem 0 0;}
 }
 
 @media (min-width: 48rem) {
@@ -43,17 +42,15 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     width: calc(100% + 2rem);
-    margin: 0 0 0 -1rem;
+    margin: -1rem 0 -1rem -1rem;
     .card {
       width: calc(50% - 2rem);
       max-width: 38rem;
-      margin: 1rem;
     }
-    .card:last-child {margin: 1rem;}
   }
 }
 
-@media (min-width: 64rem) {
+@media (min-width: 58.75rem) {
   .card-group {
     .card {width: calc(33.3% - 2rem);}
   }
