--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -21,7 +21,7 @@ footer {
       li:last-child {padding: 0 0 1rem;}
     }
   }
-  section.brand-content {
+  .brand-content {
     .logo {
       display: flex;
       flex-direction: column;
@@ -40,10 +40,11 @@ footer {
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      .github, .slack {
+      .github, .slack, .social {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         width: 2rem;
         height: 2rem;
         margin: 0 0.25rem;
@@ -78,7 +79,7 @@ footer {
       width: 50%;
       ul li {text-align: left;}
     }
-    section.brand-content {
+    .brand-content {
       width: 50%;
       .logo {padding: 0 0 1rem;}
     }
