--- a/demo/assets/css/_demo.scss
+++ b/demo/assets/css/_demo.scss
@@ -2,6 +2,71 @@
 $demo-dk: #006838;
 $demo-lt: #009345;
 
+$white: #ffffff;
+
+$celestial: #98b4cf; // baby blue
+$elation: #abd1c9; // warm light gray
+$cream: #eeefea; // called extra white
+$night: #24383f; // dark blue
+$pink: #c65069;
+$sea: #33586d; // medium blue
+$sky: #abd1c9; // like a seafoam green
+
+
+// COLOR APPLICATION
+a {color: $pink;}
+
+p.icon a span svg {fill: $pink;}
+
+button, .button, a.button {
+  border-color: $pink;
+  background-color: $pink;
+}
+
+footer .brand-content .links .social a svg {fill: $pink;}
+
+.bg-celestial {background-color: $celestial;}
+.bg-elation {background-color: $elation;}
+.bg-cream {background-color: $cream;}
+.bg-night {background-color: $night;}
+.bg-pink {background-color: $pink;}
+.bg-sea {background-color: $sea;}
+.bg-sky {background-color: $sky;}
+
+
+::-moz-selection {background: $pink;}
+
+::selection {background: $pink;}
+
+
+// LOGO COLORS
+header .logo svg {
+  .back-pines {fill: $celestial;}
+  .mid-pines {fill: $night;}
+  .front-pines {fill: $white;}
+  .copy-mark {fill: $white;}
+}
+
+footer .logo svg {
+  .back-pines {fill: $celestial;}
+  .mid-pines {fill: $white;}
+  .front-pines {fill: $night;}
+  .copy-mark {fill: $night;}
+}
+
+.text.about .logo svg {
+  .back-pines {
+    fill: $white;
+    opacity: 0.5;
+  }
+  .mid-pines {
+    fill: $white;
+    opacity: 0.75;
+  }
+  .front-pines {fill: $night;}
+  .copy-mark {fill: $night;}
+}
+
 
 // HEADER
 header {
@@ -9,16 +74,30 @@ header {
 }
 
 
+// MAIN
+main:after {background-color: transparent;}
+
+
 // FOOTER
 footer {
+  padding: 4rem;
+  background-color: $night;
+  nav ul {
+    font-size: 0.8rem;
+    color: $pink;
+    li a {color: $white;}
+    li a:hover, li a:focus {color: $pink;}
+  }
   .brand-content {
     .logo {
       text-align: center;
+      h2, p a {color: $white;}
+      h2 + p {padding: 0.25rem 0 0;}
       p {
         padding: 0;
         font-size: 0.8rem;
       }
-      h2 + p {padding: 0.25rem 0 0;}
+      p a:hover, p a:focus {color: $pink;}
     }
     .links {
       .social {
@@ -29,15 +108,23 @@ footer {
           height: 1.5rem;
         }
       }
+      .social a svg {fill: $white;}
+      .social a:hover svg, .social a:focus svg {fill: $pink;}
     }
   }
   .copyright {
-    a {margin: 0 0 0 1rem;}
+    p {color: $white;}
+    a {
+      margin: 0 0 0 1rem;
+      color: $white;
+    }
+    a:hover, a:focus {color: $pink;}
   }
 }
 
 @media (min-width: 48rem) {
   footer {
+    align-items: flex-start;
     .brand-content {
       .logo {
         align-items: flex-end;
