--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -35,6 +35,8 @@
   }
 }
 
+h1 + .card-group, h2 + .card-group {margin: 1rem 0 -1rem;}
+
 @media (min-width: 48rem) {
   .card-group {
     flex-direction: row;
@@ -49,6 +51,7 @@
     }
   }
 }
+h1 + .card-group, h2 + .card-group {margin: 1rem -1rem -1rem;}
 
 @media (min-width: 58.75rem) {
   .card-group {
