--- a/css/master.css
+++ b/css/master.css
@@ -1748,6 +1748,9 @@ nav.open .search {
       padding: 1rem;
       width: 100%; }
 
+h1 + .card-group, h2 + .card-group {
+  margin: 1rem 0 -1rem; }
+
 @media (min-width: 48rem) {
   .card-group {
     flex-direction: row;
@@ -1759,6 +1762,9 @@ nav.open .search {
     .card-group .card {
       width: calc(50% - 2rem);
       max-width: 38rem; } }
+
+h1 + .card-group, h2 + .card-group {
+  margin: 1rem -1rem -1rem; }
 
 @media (min-width: 58.75rem) {
   .card-group .card {
