--- a/demo/assets/css/demo.css
+++ b/demo/assets/css/demo.css
@@ -25,6 +25,12 @@ p.icon a span svg {
 p.icon a:hover span svg, p.icon a:focus span svg {
   fill: #c19434; }
 
+.skip a {
+  color: #34421e; }
+
+.skip a:focus {
+  color: #c19434; }
+
 button, .button {
   border-color: #34421e;
   background-color: #34421e; }
