--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -48,6 +48,15 @@ h1 + .card-group, h2 + .card-group {margin: 1rem 0 -1rem;}
     .card {
       width: calc(50% - 2rem);
       max-width: 38rem;
+      a figure {
+        img {
+          @include transition(all, 0.5s, ease);
+          @include transform(scale(1));
+        }
+      }
+      a:hover figure, a:focus figure {
+        img {@include transform(scale(1.25));}
+      }
     }
   }
 }
