--- a/css/master.scss
+++ b/css/master.scss
@@ -7,10 +7,10 @@
 @import "_atoms/blockquotes";
 @import "_atoms/chips";
 @import "_atoms/badges";
-@import "_atoms/feedback";
 @import "_atoms/breadcrumbs";
 @import "_atoms/pagination";
 
+@import "_molecules/feedback";
 @import "_molecules/forms";
 @import "_molecules/search";
 @import "_molecules/accordions";
