Updated index, badges, downloads, and bannrrs
Added demo and Sketch library to system index/home page; updated badges styles to enable use with h tags; updated padding for split banners (should've been 2rem around all 4 sides); updated copy on Downloads page; other small error corrections.

--- a/css/_organisms/_banners.scss
+++ b/css/_organisms/_banners.scss
@@ -59,7 +59,8 @@
 
 .banner.split {
   z-index: 0;
-  padding: 2rem 2rem 0;
+  margin: 2rem 0;
+  padding: 2rem;
   figure {padding: 0;}
   .text {padding: 2rem 0 0;}
 }
