--- a/css/_atoms/_badges.scss
+++ b/css/_atoms/_badges.scss
@@ -1,5 +1,24 @@
-// BADGES
-span.badge {
+// TYPE BADGES
+h1 .badge,
+h2 .badge,
+h3 .badge,
+h4 .badge {
+  display: block;
+  margin: 0 0 0.5rem;
+  font-size: 0.8rem;
+  span {
+    display: inline-flex;
+    align-items: center;
+    height: 1.5rem;
+    padding: 0 0.75rem;
+    border-radius: 1rem;
+    @include font-bold;
+  }
+}
+
+
+// LIST BADGES
+li span.badge {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,8 +35,17 @@ span.badge {
 
 // ACCORDION BADGES
 .accordion label span.badge {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
   right: 1.5rem;
   height: 100%;
+  padding: 0 0.75rem;
+  border-radius: 1rem;
+  @include font-bold;
+  font-size: 0.8rem;
 }
 
 span.badge.bg-black,
@@ -25,6 +53,12 @@ span.badge.bg-primary,
 span.badge.bg-secondary,
 span.badge.bg-lt-blue,
 span.badge.bg-error,
-span.badge.bg-valid {
+span.badge.bg-valid,
+.badge span.bg-black,
+.badge span.bg-primary,
+.badge span.bg-secondary,
+.badge span.bg-lt-blue,
+.badge span.bg-error,
+.badge span.bg-valid {
   color: $white;
 }
